scrollbar fix

--- a/src/components/shared/tabs.scss
+++ b/src/components/shared/tabs.scss
@@ -1,7 +1,6 @@
 @import './styles/common';
 
 .tabs {
-    height: 100%;
 
     .tabList {
         display: flex;
